alterações no backend e frontend

--- a/finops-micro/backend/.env.example
+++ b/finops-micro/backend/.env.example
@@ -7,6 +7,7 @@ AUTO_INGEST_ON_REQUEST=true
 # Conexao local para o Postgres rodando em container Docker com porta 5432 publicada
 DATABASE_URL=postgresql+psycopg2://finops:finops123@127.0.0.1:5432/finops
 CORS_ORIGINS=http://localhost:3000
+CORS_ORIGIN_REGEX=^https?://(localhost|127\\.0\\.0\\.1)(:\\d+)?$
 
 # AWS CLI ingest
 AWS_PROFILE=
@@ -22,3 +23,16 @@ OCI_TENANT_ID=ocid1.tenancy.oc1..aaaaaaaa2mqkus3demgbgrfae7nnkf7pixl5ngrcosast7u
 OCI_PROFILE=DEFAULT
 OCI_REGION=sa-saopaulo-1
 OCI_CLI_PATH=oci
+
+# Metas para cards da Visao Geral (summary_v2)
+TARGET_MONTHLY_BRL=0
+TARGET_WEEKLY_BRL=0
+TARGET_MONTHLY_USD=0
+TARGET_WEEKLY_USD=0
+
+# Overrides de meta mensal por cloud (apenas BRL), formato JSON:
+# {"aws":{"2026-01":120000,"2026-02":138530},"azure":{"2026-02":95000},"all":{"2026-03":100000}}
+MONTHLY_TARGETS_JSON=
+
+# Fallback da cotacao USD (BRL por USD) quando dim_currency_rate nao tiver dados
+USD_RATE_FALLBACK=
