--- a/finops-micro/infra/.env.example
+++ b/finops-micro/infra/.env.example
@@ -6,5 +6,6 @@ POSTGRES_PORT=5432
 
 DATABASE_URL=postgresql+psycopg2://finops:finops@finops-db:5432/finops
 CORS_ORIGINS=http://localhost:3000
+CORS_ORIGIN_REGEX=^https?://(localhost|127\\.0\\.0\\.1)(:\\d+)?$
 
 NEXT_PUBLIC_API_BASE_URL=http://localhost:8000/api/v1
