ajustes diversos realizados no dashboard

--- a/finops-micro/backend/.env.example
+++ b/finops-micro/backend/.env.example
@@ -12,6 +12,7 @@ CORS_ORIGIN_REGEX=^https?://(localhost|127\\.0\\.0\\.1)(:\\d+)?$
 # AWS CLI ingest
 AWS_PROFILE=
 AWS_CLI_PATH=aws
+AWS_ACCOUNT_NAMES_JSON={"555136764052":"Algar Brain VM","937406753822":"Algar Security","595949041525":"Algar Telecom","209663503877":"AlgarAppDEV","655629219208":"AlgarAppHOM","669477896728":"AlgarAppPRD","518919108570":"AlgarDataLakeDev","149748488652":"Estacao de Experiencias Digitais","838968885358":"Gestao de Marketplace DEV","752725527618":"poc-aiops"}
 
 # Azure CLI ingest
 AZURE_MANAGEMENT_GROUP_ID=mg-algar-finops
@@ -33,6 +34,11 @@ TARGET_WEEKLY_USD=0
 # Overrides de meta mensal por cloud (apenas BRL), formato JSON:
 # {"aws":{"2026-01":120000,"2026-02":138530},"azure":{"2026-02":95000},"all":{"2026-03":100000}}
 MONTHLY_TARGETS_JSON=
+
+# Sincronizacao da cotacao USD/BRL para dim_currency_rate
+CURRENCY_RATE_SYNC_ON_REQUEST=true
+CURRENCY_RATE_PROVIDER_URL=https://economia.awesomeapi.com.br/json/daily/USD-BRL/1
+CURRENCY_RATE_TIMEOUT_SECONDS=10
 
 # Fallback da cotacao USD (BRL por USD) quando dim_currency_rate nao tiver dados
 USD_RATE_FALLBACK=
